tests/semantic/pass/logic.c
int main ()
{
int a = 1; float b = 0.0;
if (a && !b) { puts("ok"); }  // coerção numérica p/ bool; ! -> not
}
