tests/semantic/fail/missing_return.c
int f(int a) {
  if (a > 0) return a;
  // falta return em outro ramo
}

int main() { return 0; }
